--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,7 +286,7 @@ li {
 
 .mobile-menu {
     position: fixed;
-    width: 320px;
+    width: 100%;
     height: 100vh;
     background: #ffffff;
     z-index: 99;
@@ -294,10 +294,10 @@ li {
     top: 0;
     left: 0;
     transition: .3s;
-    margin-left: -400px;
+    margin-left: -420px;
     padding-left: 40px;
     padding-top: 100px;
-}
+max-width: 420px;}
 
 .siteBar {
     margin-left: 0;
@@ -316,7 +316,7 @@ li {
 
 .mobile-menu nav ul li a {
     color: #272835;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 40px;
     transition: .3s;
 }
@@ -370,13 +370,13 @@ li {
     top: 15px;
     width: 40px;
     height: 40px;
-    background: #ff4900;
+    
     text-align: center;
     line-height: 40px;
     border-radius: 50%;
-    font-size: 22px;
-    color: #fff;
-    box-shadow: 0px 0px 17px -2px #0000004a;
+    font-size: 35px;
+    color: var(--thm_color);
+    
 }
 
 
