--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -131,7 +131,9 @@
     }
     .Architecture_img img {
         width: 100%;
-    }
+    display: none;}
+
+img.Architecture_mobile {display: block;}
     .bar {
         transform: translateX(35px);
     }
@@ -158,7 +160,9 @@
     .rodemap_blk h3 {
         margin: 15px 0 20px;
     }
-    .scheme_img {}
+    .scheme_img i {display: none;}
+
+i.scheme_mobile {display: block;text-align: center;}
     .ar-rodemap_blk {
         flex: 0 0 100%;
         margin-top: 51px !important;
@@ -222,8 +226,8 @@
         display: none;
     }
     .scheme_img img {
-        width: 100%;
-    object-fit: cover;}
+        
+    object-fit: cover;width: 100%;transform: scale(0.9);}
     .ar-rodemap_blk p {
         font-size: 16px;
         border-radius: 40px;
